# recap

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: release.yml
recap/: __init__.py  _native.py  audio.py  cli.py  config.py  discovery.py  exceptions.py  ffmpeg.py  recorder.py  recorder.py.bak  release.py  video.py
rust_core/: Cargo.toml
rust_core/src/: audio.rs  discovery.rs  lib.rs  video.rs
