[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recap-capture"
version = "0.1.0"
description = "Headless screen and audio capture library and CLI for Windows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["screen-capture", "audio-capture", "windows", "wgc", "wasapi", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Video :: Capture",
]

dependencies = [
    "comtypes>=1.4",
]

[project.scripts]
recap = "recap.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["recap*"]
