[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "recap-capture"
version = "0.5.3"
description = "Cross-platform headless screen and audio capture library and CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["screen-capture", "audio-capture", "cross-platform", "windows", "macos", "linux", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Video :: Capture",
]

dependencies = [
    "comtypes>=1.4; sys_platform == 'win32'",
]

[project.scripts]
recap = "recap.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["recap*"]

[tool.maturin]
manifest-path = "rust_core/Cargo.toml"
module-name = "recap._rust_core"
python-source = "."
features = ["pyo3/extension-module"]
