[package]
name = "recap_core"
version = "0.3.0"
edition = "2021"

[lib]
name = "recap_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
windows = { version = "0.61", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_HiDpi",
    "Win32_System_ProcessStatus",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Variant",
    "Win32_Storage_Xps",
    "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.61"
